Add RoomFactory and ViewRoomUsecase for room management; implement ViewRoomDTO for data transfer; update UML diagram to reflect new classes and relationships.

--- a/src/main/resources/vn/giadinh/phonghoc/hello-view.fxml
+++ b/src/main/resources/vn/giadinh/phonghoc/hello-view.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
-      fx:controller="vn.giadinh.phonghoc.HelloController">
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.12" fx:controller="vn.giadinh.phonghoc.HelloController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
-    <Label fx:id="welcomeText" styleClass="text-success"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick" styleClass="btn-primary"/>
+    <Label fx:id="welcomeText" styleClass="text-success" />
+    <Button onAction="#onHelloButtonClick" styleClass="btn-primary" text="Hello!" />
 </VBox>
