Enhance room management by adding roomType attribute across Room, DTOs, and views; update RoomFactory and ViewRoomUsecase to handle roomType; modify ListRoomView and FXML for displaying roomType in the UI.

--- a/src/main/resources/vn/giadinh/phonghoc/list-room-view.fxml
+++ b/src/main/resources/vn/giadinh/phonghoc/list-room-view.fxml
@@ -153,6 +153,8 @@
                     <TableColumn fx:id="roomId" style="-fx-font-weight: bold; -fx-text-fill: #2c3e50;" text="Mã phòng"/>
                     <TableColumn fx:id="buildingBlock" style="-fx-font-weight: bold; -fx-text-fill: #2c3e50;"
                                  text="Dãy nhà"/>
+                    <TableColumn fx:id="roomType" style="-fx-font-weight: bold; -fx-text-fill: #2c3e50;"
+                                 text="Loại phòng"/>
                     <TableColumn fx:id="area" style="-fx-font-weight: bold; -fx-text-fill: #2c3e50;" text="Diện tích"/>
                     <TableColumn fx:id="numLightBulbs" style="-fx-font-weight: bold; -fx-text-fill: #2c3e50;"
                                  text="Số bóng đèn"/>
